Update the URL value in the ROKS URL field in the platform-auth-idp configmap (#2326)
* add common-web-ui-config cm to labeling script

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* update roks url value

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* update permissions

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* add new version of script

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* change file name

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* add platform-auth-idp to labeling script

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* alter how route is applied

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* update permissions and file location

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* update typo

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* add 1 to cut len

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

* edit patch command

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

---------

Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

--- a/velero/schedule/common-service-db/cs-db-role.yaml
+++ b/velero/schedule/common-service-db/cs-db-role.yaml
@@ -20,6 +20,7 @@ rules:
       - extensions
       - apps
       - policy
+      - route.openshift.io
     resources:
       - pods
       - pods/log
@@ -33,6 +34,8 @@ rules:
       - pods/status
       - jobs
       - secrets
+      - configmaps
+      - routes
   - verbs:
       - get
       - list
