--- a/velero/schedule/common-service-db/cs-db-br-script-cm-4.6.10.4.11.yaml
+++ b/velero/schedule/common-service-db/cs-db-br-script-cm-4.6.10.4.11.yaml
@@ -6,29 +6,6 @@ metadata:
   labels:
     foundationservices.cloudpak.ibm.com: cs-db-data
 data:
-  dummy_route.yaml: |
-    apiVersion: route.openshift.io/v1
-    kind: Route
-    metadata:
-        annotations:
-            haproxy.router.openshift.io/pod-concurrent-connections: "100"
-            haproxy.router.openshift.io/rate-limit-connections: "true"
-            haproxy.router.openshift.io/rate-limit-connections.concurrent-tcp: "100"
-            haproxy.router.openshift.io/rate-limit-connections.rate-http: "100"
-            haproxy.router.openshift.io/rate-limit-connections.rate-tcp: "100"
-            haproxy.router.openshift.io/timeout: 90s
-        name: dummy
-    spec:
-        path: /
-        port:
-            targetPort: 43
-            insecureEdgeTerminationPolicy: Redirect
-            termination: reencrypt
-        wildcardPolicy: None
-        to:
-            kind: Service
-            name: common-web-ui
-            weight: 100
   br_cs-db.sh: |
     #!/usr/bin/env bash
 
@@ -52,7 +29,7 @@ data:
     BACKUP_DIR=/cs-db/cs-db-backup
 
     function main {
-        EMBEDDED=$(oc get cm -n $CSDB_NAMESPACE im-datastore-edb-cm -o jsonpath='{.data.IS_EMBEDDED}{"\n"}')
+        EMBEDDED=$(oc get cm -n $CSDB_NAMESPACE common-service-db-im -o jsonpath='{.data.IS_EMBEDDED}{"\n"}')
         if [[ $MODE == "backup" ]]; then
             save_log "logs" "backup_log"
             trap cleanup_log EXIT
@@ -132,9 +109,7 @@ data:
         else
             info "External Postgres DB in use, skipping data restore."
         fi
-
-        update_ROKS_URL
-
+        
         info "Rerunning OIDC registration job..."
         oc -n $CSDB_NAMESPACE get job oidc-client-registration -o yaml > /tmp/oidc-client-registration.yaml
         oc -n $CSDB_NAMESPACE delete job oidc-client-registration
@@ -193,36 +168,6 @@ data:
         else
             error "EDB cluster $CLUSTER_CR not present."
         fi
-    }
-
-    function update_ROKS_URL(){
-        info "Creating dummy route to update ROKS_URL value..."
-        #create dummy route
-        oc apply -f cs-db/dummy_route.yaml -n $CSDB_NAMESPACE
-        
-        #take domain value of route
-        #looks something like dummy-<namespace>.apps.<domain>.cp.fyre.ibm.com
-        #interested in everything after "apps."
-        info "Grabbing new hostname..."
-        dummy_hostname=$(oc get route dummy -n $CSDB_NAMESPACE -o jsonpath='{.spec.host}')
-        len_ns_str=${#CSDB_NAMESPACE}
-        
-        #add the length of the namespace to the length of word "dummy". Also include length of "apps" and the two periods
-        cut_len=$(($len_ns_str+12))
-        
-        #build correct string
-        actual_hostname=${dummy_hostname:cut_len}
-        info "New hostname: $actual_hostname"
-        new_ROKS_URL="https://oauth-openshift.apps.$actual_hostname"
-        info "New ROKS_URL value: $new_ROKS_URL"
-        
-        #replace value in platform-auth-idp cm
-        info "Updating ROKS_URL value in platform-auth-idp configmap..."
-        oc patch cm platform-auth-idp -n $CSDB_NAMESPACE --type merge --patch '{"data":{"ROKS_URL":"'${new_ROKS_URL}'"}}'
-        
-        #delete dummy route
-        info "Deleting dummy route from namespace $CSDB_NAMESPACE..."
-        oc delete route dummy -n $CSDB_NAMESPACE
     }
 
     function save_log(){
