--- a/velero/spectrum-fusion/recipes/4.0-4.5-example-recipe-multi-ns.yaml
+++ b/velero/spectrum-fusion/recipes/4.0-4.5-example-recipe-multi-ns.yaml
@@ -32,7 +32,7 @@ spec:
       includeClusterResources: true
       includedResourceTypes:
         - customresourcedefinitions.apiextensions.k8s.io
-      name: cert-manager-config-crd
+      name: cert-manager-crds
       type: resource
     - labelSelector: foundationservices.cloudpak.ibm.com=licensing
       name: licensing-resources
@@ -91,7 +91,7 @@ spec:
       type: resource
     - includedResourceTypes:
         - subscriptions.operators.coreos.com
-      labelSelector: foundationservices.cloudpak.ibm.com=cert-manager
+      labelSelector: foundationservices.cloudpak.ibm.com=cert-manager-operator
       name: cert-manager-subscription
       type: resource
     - includeClusterResources: true
@@ -408,7 +408,7 @@ spec:
         - group: common-services-catalogs
         - group: common-services-operatorgroups
         - hook: cert-manager-webhook-exists-check/webhookExists
-        - group: cert-manager-config-crd
+        - group: cert-manager-crds
         - group: cert-manager-workload-resources
         - group: cert-manager-subscription
         - hook: cert-manager-operator-check/podReady
