--- a/velero/spectrum-fusion/recipes/4.7-example-recipe-single-ns.yaml
+++ b/velero/spectrum-fusion/recipes/4.7-example-recipe-single-ns.yaml
@@ -21,7 +21,7 @@ spec:
       includeClusterResources: true
       includedResourceTypes:
         - customresourcedefinitions.apiextensions.k8s.io
-      name: cert-manager-config-crd
+      name: cert-manager-crds
       type: resource
     - backupRef: cert-manager-resources
       includeClusterResources: true
@@ -135,7 +135,7 @@ spec:
       type: resource
     - includedResourceTypes:
         - subscriptions.operators.coreos.com
-      labelSelector: foundationservices.cloudpak.ibm.com=cert-manager
+      labelSelector: foundationservices.cloudpak.ibm.com=cert-manager-operator
       name: cert-manager-subscription
       type: resource
     - includedResourceTypes:
@@ -448,7 +448,7 @@ spec:
         - group: common-services-catalogs
         - group: common-services-operatorgroups
         - hook: cert-manager-webhook-exists-check/webhookExists
-        - group: cert-manager-config-crd
+        - group: cert-manager-crds
         - group: cert-manager-config-cr
         - group: cert-manager-subscription
         - hook: cert-manager-operator-check/podReady
