--- a/velero/spectrum-fusion/recipes/4.7-example-recipe-multi-ns-multi-zen.yaml
+++ b/velero/spectrum-fusion/recipes/4.7-example-recipe-multi-ns-multi-zen.yaml
@@ -25,8 +25,13 @@ spec:
     - backupRef: cert-manager-resources
       includeClusterResources: true
       includedResourceTypes:
+        - secrets
+        - certificates.cert-manager.io
+        - issuers.cert-manager.io
+        - clusterissuers.cert-manager.io
         - certmanagerconfigs.operator.ibm.com
-      name: cert-manager-config-cr
+      name: cert-manager-workload-resources
+      labelSelector: foundationservices.cloudpak.ibm.com=cert-manager
       type: resource
     - includeClusterResources: true
       includedResourceTypes:
@@ -570,7 +575,7 @@ spec:
         - group: common-services-operatorgroups
         - hook: cert-manager-webhook-exists-check/webhookExists
         - group: cert-manager-crds
-        - group: cert-manager-config-cr
+        - group: cert-manager-workload-resources
         - group: cert-manager-subscription
         - hook: cert-manager-operator-check/podReady
         - hook: cert-manager-webhook-check/podReady
