removed hardcode namespace
Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: ibm-common-service-operator
-  namespace: ibm-common-services
+  # namespace: ibm-common-services
   labels:
     app.kubernetes.io/instance: "ibm-common-service-operator"
     app.kubernetes.io/managed-by: "ibm-common-service-operator"
