--- a/helm/ibm-common-service-operator.config
+++ b/helm/ibm-common-service-operator.config
@@ -7,6 +7,7 @@ sharedValues:
   resources: {}
   securityContext: {}
   tolerations: {}
+  namespace: custom-namespace
 globalConfig:
   metadata.labels:
   - strategy: newline
@@ -14,6 +15,9 @@ globalConfig:
   metadata.name:
   - strategy: inline
     key: ibm-common-service-operator.fullname
+  metadata.namespace:
+  - strategy: inline
+    key: sharedValues.namespace
 fileConfig:
   helm/ibm-common-service-operator-generated/commonservices.operator.ibm.com-crd.yaml: {}
   helm/ibm-common-service-operator-generated/ibm-common-service-operator-cr.yaml: {}
