--- a/config/ibm-common-service-operator.yaml
+++ b/config/ibm-common-service-operator.yaml
@@ -351,7 +351,6 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: ibm-common-service-operator
-  namespace: system
 rules:
 - apiGroups:
   - ""
@@ -624,7 +623,6 @@ metadata:
     app.kubernetes.io/managed-by: ibm-common-service-operator
     app.kubernetes.io/name: ibm-common-service-operator
   name: ibm-common-service-operator
-  namespace: system
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -655,7 +653,6 @@ apiVersion: v1
 kind: Service
 metadata:
   name: webhook-service
-  namespace: system
 spec:
   ports:
   - port: 443
@@ -672,7 +669,6 @@ metadata:
     app.kubernetes.io/name: ibm-common-service-operator
     productName: IBM_Cloud_Platform_Common_Services
   name: ibm-common-service-operator
-  namespace: system
 spec:
   replicas: 1
   selector:
@@ -776,11 +772,10 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: serving-cert
-  namespace: system
 spec:
   dnsNames:
-  - webhook-service.system.svc
-  - webhook-service.system.svc.cluster.local
+  - webhook-service.$(SERVICE_NAMESPACE).svc
+  - webhook-service.$(SERVICE_NAMESPACE).svc.cluster.local
   issuerRef:
     kind: Issuer
     name: selfsigned-issuer
@@ -790,7 +785,6 @@ apiVersion: cert-manager.io/v1
 kind: Issuer
 metadata:
   name: selfsigned-issuer
-  namespace: system
 spec:
   selfSigned: {}
 ---
@@ -798,7 +792,7 @@ apiVersion: admissionregistration.k8s.io/v1
 kind: MutatingWebhookConfiguration
 metadata:
   annotations:
-    cert-manager.io/inject-ca-from: system/serving-cert
+    cert-manager.io/inject-ca-from: $(CERTIFICATE_NAMESPACE)/serving-cert
   name: mutating-webhook-configuration
 webhooks:
 - admissionReviewVersions:
@@ -826,7 +820,7 @@ apiVersion: admissionregistration.k8s.io/v1
 kind: ValidatingWebhookConfiguration
 metadata:
   annotations:
-    cert-manager.io/inject-ca-from: system/serving-cert
+    cert-manager.io/inject-ca-from: $(CERTIFICATE_NAMESPACE)/serving-cert
   name: validating-webhook-configuration
 webhooks:
 - admissionReviewVersions:
