--- a/helm/ibm-common-service-operator/templates/serving-cert-certificate.yaml
+++ b/helm/ibm-common-service-operator/templates/serving-cert-certificate.yaml
@@ -3,11 +3,10 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata: 
   name: {{ include "ibm-common-service-operator.fullname" . }}
-  namespace: system
 spec: 
   dnsNames: 
-    - webhook-service.system.svc
-    - webhook-service.system.svc.cluster.local
+    - webhook-service.$(SERVICE_NAMESPACE).svc
+    - webhook-service.$(SERVICE_NAMESPACE).svc.cluster.local
   issuerRef: 
     kind: Issuer
     name: selfsigned-issuer
