--- a/helm/ibm-common-service-operator/templates/validating-webhook-configuration-validatingwebhookconfiguration.yaml
+++ b/helm/ibm-common-service-operator/templates/validating-webhook-configuration-validatingwebhookconfiguration.yaml
@@ -4,7 +4,7 @@ kind: ValidatingWebhookConfiguration
 metadata: 
   name: {{ include "ibm-common-service-operator.fullname" . }}
   annotations: 
-    cert-manager.io/inject-ca-from: system/serving-cert
+    cert-manager.io/inject-ca-from: $(CERTIFICATE_NAMESPACE)/serving-cert
 webhooks:   
   - admissionReviewVersions: 
       - v1
