--- a/helm/ibm-common-service-operator-generated/ibm-common-service-operator-deployment.yaml
+++ b/helm/ibm-common-service-operator-generated/ibm-common-service-operator-deployment.yaml
@@ -7,6 +7,7 @@ metadata:
     app.kubernetes.io/name: ibm-common-service-operator
     productName: IBM_Cloud_Platform_Common_Services
   name: ibm-common-service-operator
+  namespace: system
 spec:
   replicas: 1
   selector:
