--- a/helm/ibm-common-service-operator-generated/serving-cert-certificate.yaml
+++ b/helm/ibm-common-service-operator-generated/serving-cert-certificate.yaml
@@ -2,6 +2,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: serving-cert
+  namespace: system
 spec:
   dnsNames:
   - webhook-service.$(SERVICE_NAMESPACE).svc
