--- a/helm/ibm-common-service-operator/templates/ibm-common-service-operator-deployment.yaml
+++ b/helm/ibm-common-service-operator/templates/ibm-common-service-operator-deployment.yaml
@@ -3,6 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata: 
   name: {{ include "ibm-common-service-operator.fullname" . }}
+  namespace: {{ .Values.namespace }}
   labels:
     {{- include "ibm-common-service-operator.labels" . | nindent 4 }}
 spec: 
