--- a/helm/ibm-common-service-operator/templates/ibm-common-service-operator-rb.yaml
+++ b/helm/ibm-common-service-operator/templates/ibm-common-service-operator-rb.yaml
@@ -3,6 +3,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata: 
   name: {{ include "ibm-common-service-operator.fullname" . }}
+  namespace: {{ .Values.namespace }}
   labels:
     {{- include "ibm-common-service-operator.labels" . | nindent 4 }}
 roleRef: 
