--- a/helm/ibm-common-service-operator/templates/ibm-common-service-operator-role.yaml
+++ b/helm/ibm-common-service-operator/templates/ibm-common-service-operator-role.yaml
@@ -3,6 +3,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata: 
   name: {{ include "ibm-common-service-operator.fullname" . }}
+  namespace: {{ .Values.namespace }}
 rules:   
   - apiGroups: 
       - ""
