--- a/helm/ibm-common-service-operator/templates/serving-cert-certificate.yaml
+++ b/helm/ibm-common-service-operator/templates/serving-cert-certificate.yaml
@@ -3,6 +3,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata: 
   name: {{ include "ibm-common-service-operator.fullname" . }}
+  namespace: {{ .Values.namespace }}
 spec: 
   dnsNames: 
     - webhook-service.$(SERVICE_NAMESPACE).svc
