--- a/helm/ibm-common-service-operator/templates/webhook-service-svc.yaml
+++ b/helm/ibm-common-service-operator/templates/webhook-service-svc.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Service
 metadata: 
   name: {{ include "ibm-common-service-operator.fullname" . }}
+  namespace: {{ .Values.namespace }}
 spec: 
   ports:     
     - port: 443
