--- a/helm/ibm-common-service-operator-generated/ibm-common-service-operator-role.yaml
+++ b/helm/ibm-common-service-operator-generated/ibm-common-service-operator-role.yaml
@@ -2,7 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: ibm-common-service-operator
-  namespace: system
+  namespace: custom-namespace
 rules:
 - apiGroups:
   - ""
