--- a/helm/ibm-common-service-operator/templates/serving-cert-certificate.yaml
+++ b/helm/ibm-common-service-operator/templates/serving-cert-certificate.yaml
@@ -6,8 +6,8 @@ metadata:
   namespace: {{ .Values.namespace }}
 spec: 
   dnsNames: 
-    - webhook-service.$(SERVICE_NAMESPACE).svc
-    - webhook-service.$(SERVICE_NAMESPACE).svc.cluster.local
+    - webhook-service.custom-namespace.svc
+    - webhook-service.custom-namespace.svc.cluster.local
   issuerRef: 
     kind: Issuer
     name: selfsigned-issuer
