--- a/helm/ibm-common-service-operator-generated/selfsigned-issuer-issuer.yaml
+++ b/helm/ibm-common-service-operator-generated/selfsigned-issuer-issuer.yaml
@@ -2,6 +2,6 @@ apiVersion: cert-manager.io/v1
 kind: Issuer
 metadata:
   name: selfsigned-issuer
-  namespace: system
+  namespace: custom-namespace
 spec:
   selfSigned: {}
