--- a/helm/ibm-common-service-operator-generated/validating-webhook-configuration-validatingwebhookconfiguration.yaml
+++ b/helm/ibm-common-service-operator-generated/validating-webhook-configuration-validatingwebhookconfiguration.yaml
@@ -10,7 +10,7 @@ webhooks:
   clientConfig:
     service:
       name: webhook-service
-      namespace: system
+      namespace: custom-namespace
       path: /validate-operator-ibm-com-v3-commonservice
   failurePolicy: Fail
   name: vcommonservice.kb.io
