--- a/helm/ibm-common-service-operator/templates/ibm-common-service-operator-crb.yaml
+++ b/helm/ibm-common-service-operator/templates/ibm-common-service-operator-crb.yaml
@@ -12,4 +12,4 @@ roleRef:
 subjects:   
   - kind: ServiceAccount
     name: ibm-common-service-operator
-    namespace: ibm-common-services
+    namespace: custom-namespace
