--- a/helm/ibm-common-service-operator/templates/validating-webhook-configuration-validatingwebhookconfiguration.yaml
+++ b/helm/ibm-common-service-operator/templates/validating-webhook-configuration-validatingwebhookconfiguration.yaml
@@ -11,7 +11,7 @@ webhooks:
     clientConfig: 
       service: 
         name: webhook-service
-        namespace: system
+        namespace: custom-namespace
         path: /validate-operator-ibm-com-v3-commonservice
     failurePolicy: Fail
     name: vcommonservice.kb.io
