substitute CERTIFICATE_NAMESPACE in webhook annotation
Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>

--- a/helm/ibm-common-service-operator-generated/validating-webhook-configuration-validatingwebhookconfiguration.yaml
+++ b/helm/ibm-common-service-operator-generated/validating-webhook-configuration-validatingwebhookconfiguration.yaml
@@ -2,7 +2,7 @@ apiVersion: admissionregistration.k8s.io/v1
 kind: ValidatingWebhookConfiguration
 metadata:
   annotations:
-    cert-manager.io/inject-ca-from: $(CERTIFICATE_NAMESPACE)/serving-cert
+    cert-manager.io/inject-ca-from: custom-namespace/serving-cert
   name: validating-webhook-configuration
 webhooks:
 - admissionReviewVersions:
