add helm chart for service account
Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>

--- a/helm/ibm-common-service-operator.config
+++ b/helm/ibm-common-service-operator.config
@@ -2,12 +2,12 @@ logger: {}
 chartname: ibm-common-service-operator
 sharedValues:
   affinity: {}
+  namespace: custom-namespace
   nodeSelector: {}
   podSecurityContext: {}
   resources: {}
   securityContext: {}
   tolerations: {}
-  namespace: custom-namespace
 globalConfig:
   metadata.labels:
   - strategy: newline
@@ -25,6 +25,7 @@ fileConfig:
   helm/ibm-common-service-operator-generated/ibm-common-service-operator-deployment.yaml: {}
   helm/ibm-common-service-operator-generated/ibm-common-service-operator-rb.yaml: {}
   helm/ibm-common-service-operator-generated/ibm-common-service-operator-role.yaml: {}
+  helm/ibm-common-service-operator-generated/ibm-common-service-operator-sa.yaml: {}
   helm/ibm-common-service-operator-generated/mutating-webhook-configuration-mutatingwebhookconfiguration.yaml: {}
   helm/ibm-common-service-operator-generated/selfsigned-issuer-issuer.yaml: {}
   helm/ibm-common-service-operator-generated/serving-cert-certificate.yaml: {}
