--- a/config/ibm-common-service-operator.yaml
+++ b/config/ibm-common-service-operator.yaml
@@ -347,6 +347,12 @@ spec:
     subresources:
       status: {}
 ---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: ibm-common-service-operator
+  namespace: custom-namespace
+---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
