--- a/helm/ibm-common-service-operator/values.yaml
+++ b/helm/ibm-common-service-operator/values.yaml
@@ -13,6 +13,7 @@ ibmCommonServiceOperatorCrb: {}
 ibmCommonServiceOperatorDeployment: {}
 ibmCommonServiceOperatorRb: {}
 ibmCommonServiceOperatorRole: {}
+ibmCommonServiceOperatorSa: {}
 mutatingWebhookConfigurationMutatingwebhookconfiguration: {}
 selfsignedIssuerIssuer: {}
 servingCertCertificate: {}
