make SA namespace as variable
Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>

--- a/helm/ibm-common-service-operator.config
+++ b/helm/ibm-common-service-operator.config
@@ -21,9 +21,15 @@ globalConfig:
 fileConfig:
   helm/ibm-common-service-operator-generated/commonservices.operator.ibm.com-crd.yaml: {}
   helm/ibm-common-service-operator-generated/ibm-common-service-operator-cr.yaml: {}
-  helm/ibm-common-service-operator-generated/ibm-common-service-operator-crb.yaml: {}
+  helm/ibm-common-service-operator-generated/ibm-common-service-operator-crb.yaml: 
+    subjects[0].namespace:
+      - strategy: inline
+        key: sharedValues.namespace
   helm/ibm-common-service-operator-generated/ibm-common-service-operator-deployment.yaml: {}
-  helm/ibm-common-service-operator-generated/ibm-common-service-operator-rb.yaml: {}
+  helm/ibm-common-service-operator-generated/ibm-common-service-operator-rb.yaml: 
+    subjects[0].namespace:
+    - strategy: inline
+      key: sharedValues.namespace
   helm/ibm-common-service-operator-generated/ibm-common-service-operator-role.yaml: {}
   helm/ibm-common-service-operator-generated/ibm-common-service-operator-sa.yaml: {}
   helm/ibm-common-service-operator-generated/mutating-webhook-configuration-mutatingwebhookconfiguration.yaml: {}
