--- a/helm/ibm-common-service-operator/templates/ibm-common-service-operator-rb.yaml
+++ b/helm/ibm-common-service-operator/templates/ibm-common-service-operator-rb.yaml
@@ -13,4 +13,4 @@ roleRef:
 subjects:   
   - kind: ServiceAccount
     name: ibm-common-service-operator
-    namespace: custom-namespace
+    namespace: {{ .Values.namespace }}
