--- a/config/ibm-common-service-operator.yaml
+++ b/config/ibm-common-service-operator.yaml
@@ -721,8 +721,14 @@ spec:
               fieldPath: metadata.namespace
         - name: WATCH_NAMESPACE
           valueFrom:
-            fieldRef:
-              fieldPath: metadata.annotations['olm.targetNamespaces']
+            configMapKeyRef:
+              key: namespaces
+              name: namespace-scope
+              optional: true
+        - name: NO_OLM
+          value: "true"
+        - name: ENABLE_WEBHOOKS
+          value: "false"
         - name: OPERATOR_NAME
           value: ibm-common-service-operator
         image: icr.io/cpopen/common-service-operator:latest
@@ -736,10 +742,6 @@ spec:
           periodSeconds: 60
           timeoutSeconds: 10
         name: ibm-common-service-operator
-        ports:
-        - containerPort: 9443
-          name: webhook-server
-          protocol: TCP
         readinessProbe:
           failureThreshold: 10
           httpGet:
@@ -766,17 +768,8 @@ spec:
           runAsNonRoot: true
           seccompProfile:
             type: RuntimeDefault
-        volumeMounts:
-        - mountPath: /tmp/k8s-webhook-server/serving-certs
-          name: cert
-          readOnly: true
       serviceAccountName: ibm-common-service-operator
       terminationGracePeriodSeconds: 10
-      volumes:
-      - name: cert
-        secret:
-          defaultMode: 420
-          secretName: webhook-server-cert
 ---
 apiVersion: cert-manager.io/v1
 kind: Certificate
