--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -70,8 +70,14 @@ spec:
               fieldPath: metadata.namespace
         - name: WATCH_NAMESPACE
           valueFrom:
-            fieldRef:
-              fieldPath: metadata.annotations['olm.targetNamespaces']
+            configMapKeyRef:
+              name: namespace-scope
+              key: namespaces
+              optional: true
+        - name: NO_OLM
+          value: 'true'
+        - name: ENABLE_WEBHOOKS
+          value: 'false'
         - name: OPERATOR_NAME
           value: "ibm-common-service-operator"
         resources:
