--- a/helm/ibm-common-service-operator-generated/ibm-common-service-operator-deployment.yaml
+++ b/helm/ibm-common-service-operator-generated/ibm-common-service-operator-deployment.yaml
@@ -50,8 +50,14 @@ spec:
               fieldPath: metadata.namespace
         - name: WATCH_NAMESPACE
           valueFrom:
-            fieldRef:
-              fieldPath: metadata.annotations['olm.targetNamespaces']
+            configMapKeyRef:
+              key: namespaces
+              name: namespace-scope
+              optional: true
+        - name: NO_OLM
+          value: "true"
+        - name: ENABLE_WEBHOOKS
+          value: "false"
         - name: OPERATOR_NAME
           value: ibm-common-service-operator
         image: icr.io/cpopen/common-service-operator:latest
@@ -65,10 +71,6 @@ spec:
           periodSeconds: 60
           timeoutSeconds: 10
         name: ibm-common-service-operator
-        ports:
-        - containerPort: 9443
-          name: webhook-server
-          protocol: TCP
         readinessProbe:
           failureThreshold: 10
           httpGet:
@@ -95,14 +97,5 @@ spec:
           runAsNonRoot: true
           seccompProfile:
             type: RuntimeDefault
-        volumeMounts:
-        - mountPath: /tmp/k8s-webhook-server/serving-certs
-          name: cert
-          readOnly: true
       serviceAccountName: ibm-common-service-operator
       terminationGracePeriodSeconds: 10
-      volumes:
-      - name: cert
-        secret:
-          defaultMode: 420
-          secretName: webhook-server-cert
