added new watsonxaiifm min rbac for zen
Signed-off-by: Henry Li <henry.h.li@ibm.com>

--- a/cp3pt0-deployment/common/nss-managed-bedrock-core-role.yaml
+++ b/cp3pt0-deployment/common/nss-managed-bedrock-core-role.yaml
@@ -1336,6 +1336,16 @@ rules:
   - verbs:
       - get
       - list
+      - patch
+      - update
+      - watch
+    apiGroups:
+      - watsonxaiifm.cpd.ibm.com
+    resources:
+      - watsonxaiifm
+  - verbs:
+      - get
+      - list
     apiGroups:
       - ibm.com
     resources:
