--- a/helm-standard/helm/Chart.yaml
+++ b/helm-standard/helm/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: ibm-odlm
+name: ibm-common-service-operator
 description: A Helm chart for ibm-common-service-operator
 type: application
 version: 4.6.11
