--- a/helm/templates/cr.yaml
+++ b/helm/templates/cr.yaml
@@ -1,12 +1,3 @@
-apiVersion: v1
-data:
-  namespaces: {{ .Values.operatorNamespace }}
-kind: ConfigMap
-metadata:
-  name: namespace-scope
-  namespace: {{ .Values.operatorNamespace }}
-
----
 
 apiVersion: cert-manager.io/v1
 kind: Issuer
@@ -17,7 +8,7 @@ metadata:
     app.kubernetes.io/name: Issuer
     operator.ibm.com/managedByCsOperator: "true"
   name: cs-ca-issuer
-  namespace: {{ .Values.operatorNamespace }}
+  namespace: {{ .Values. serviceNamespace }}
 spec:
   ca:
     secretName: cs-ca-certificate-secret
@@ -33,7 +24,7 @@ metadata:
     app.kubernetes.io/name: Issuer
     operator.ibm.com/managedByCsOperator: "true"
   name: cs-ss-issuer
-  namespace: {{ .Values.operatorNamespace }}
+  namespace: {{ .Values.serviceNamespace }}
 spec:
   selfSigned: {}
 
@@ -49,7 +40,7 @@ metadata:
     operator.ibm.com/managedByCsOperator: "true"
     ibm-cert-manager-operator/refresh-ca-chain: 'true'
   name: cs-ca-certificate
-  namespace: {{ .Values.operatorNamespace }}
+  namespace: {{ .Values.serviceNamespace }}
 spec:
   secretName: cs-ca-certificate-secret
   secretTemplate:
