--- a/helm/templates/cr.yaml
+++ b/helm/templates/cr.yaml
@@ -8,7 +8,7 @@ metadata:
     app.kubernetes.io/name: Issuer
     operator.ibm.com/managedByCsOperator: "true"
   name: cs-ca-issuer
-  namespace: {{ .Values.serviceNamespace }}
+  namespace: {{ .Values.servicesNamespace }}
 spec:
   ca:
     secretName: cs-ca-certificate-secret
@@ -24,7 +24,7 @@ metadata:
     app.kubernetes.io/name: Issuer
     operator.ibm.com/managedByCsOperator: "true"
   name: cs-ss-issuer
-  namespace: {{ .Values.serviceNamespace }}
+  namespace: {{ .Values.servicesNamespace }}
 spec:
   selfSigned: {}
 
@@ -40,7 +40,7 @@ metadata:
     operator.ibm.com/managedByCsOperator: "true"
     ibm-cert-manager-operator/refresh-ca-chain: 'true'
   name: cs-ca-certificate
-  namespace: {{ .Values.serviceNamespace }}
+  namespace: {{ .Values.servicesNamespace }}
 spec:
   secretName: cs-ca-certificate-secret
   secretTemplate:
