--- a/helm/templates/operator-deployment.yaml
+++ b/helm/templates/operator-deployment.yaml
@@ -21,6 +21,7 @@ spec:
         app.kubernetes.io/managed-by: ibm-common-service-operator
         app.kubernetes.io/name: ibm-common-service-operator
         name: ibm-common-service-operator
+        intent: protected
         productName: IBM_Cloud_Platform_Common_Services
     spec: 
       affinity: 
