--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -7,6 +7,6 @@ imageRegistryNamespaceOperand: cpopen/cpfs
 
 # other configuration you think you might need for your operator
 # following are examples, not required:
-operatorNamespace: ibm-common-services
-servicesNamespace: service
+operatorNamespace: operators
+servicesNamespace: services
 operatorImage: ibm-common-service-operator 
