change watch_namespace for now
Signed-off-by: Allen Li <liyuchen223@gmail.com>

--- a/helm/templates/operator-deployment.yaml
+++ b/helm/templates/operator-deployment.yaml
@@ -47,10 +47,10 @@ spec:
                   apiVersion: v1
                   fieldPath: metadata.namespace
             - name: WATCH_NAMESPACE
-              valueFrom: 
-                fieldRef: 
-                  apiVersion: v1
-                  fieldPath: metadata.namespace
+              valueFrom:
+                configMapKeyRef:
+                  key: namespaces
+                  name: namespace-scope
                   optional: true
             - name: NO_OLM
               value: "true"
