--- a/helm/templates/cr.yaml
+++ b/helm/templates/cr.yaml
@@ -53,3 +53,20 @@ spec:
   isCA: true
   duration: 17520h0m0s
   renewBefore: 5840h0m0s
+---
+
+kind: ConfigMap
+apiVersion: v1
+metadata:
+  name: cloud-native-postgresql-image-list
+  namespace: {{ .Values.operatorNamespace }}
+  labels:
+    operator.ibm.com/managedByCsOperator: 'true'
+    operator.ibm.com/watched-by-odlm: 'true'
+data:
+  edb-postgres-license-provider-image: 'cp.icr.io/cp/cpd/edb-postgres-license-provider@sha256:8112cfa96daac82de5a4fdede8fcaecfc41908e7ee22686e0f8818c875784a00'
+  ibm-postgresql-12-operand-image: 'icr.io/cpopen/edb/postgresql:12.20@sha256:1a5ec719c2f7da6d98374cfa43a03f96a56195416ff0c7443ee255dc92d8a82b'
+  ibm-postgresql-13-operand-image: 'icr.io/cpopen/edb/postgresql:13.16@sha256:9fc9cc5dd91c38797397a02736996857d0182e4858ee77aeeb21f855121c9347'
+  ibm-postgresql-14-operand-image: 'icr.io/cpopen/edb/postgresql:14.13@sha256:b857cfedbca28f2e17feb48b3809d29691be5eeb6d0838d8f80df402c5b018eb'
+  ibm-postgresql-15-operand-image: 'icr.io/cpopen/edb/postgresql:15.8@sha256:8f602b668e1174357332374094a93534a2ab132e954badcb82b331c2e04b65da'
+  ibm-postgresql-16-operand-image: 'icr.io/cpopen/edb/postgresql:16.4@sha256:d87a804d9bb7558d124bd83a83c261a074c26bccc3fe6ef095cdbe22be29a456'
