--- a/generate-helm/ibm-common-service-operator.config
+++ b/generate-helm/ibm-common-service-operator.config
@@ -1,7 +1,13 @@
 logger: {}
 chartname: ibm-common-service-operator
 sharedValues:
+  imagePullPrefix: icr.io
+  imagePullSecret: ibm-entitlement-key
+  imageRegistryNamespaceOperator: cpopen
+  imageRegistryNamespaceOperand: cpopen/cpfs
   operatorNamespace: operator-ns
+  operatorImage: ibm-common-service-operator 
+  tag: latest
   affinity: {}
   nodeSelector: {}
   podSecurityContext: {}
@@ -25,7 +31,16 @@ fileConfig:
     subjects[0].namespace:
       - strategy: inline
         key: sharedValues.operatorNamespace
-  generate-helm/ibm-common-service-operator-generated/ibm-common-service-operator-deployment.yaml: {}
+  generate-helm/ibm-common-service-operator-generated/ibm-common-service-operator-deployment.yaml:
+    spec.template.spec.containers[0].image:
+    - strategy: inline
+      key: sharedValues.imagePullPrefix
+    - strategy: inline
+      key: sharedValues.imageRegistryNamespaceOperator
+    - strategy: inline
+      key: sharedValues.operatorImage
+    - strategy: inline
+      key: sharedValues.tag
   generate-helm/ibm-common-service-operator-generated/ibm-common-service-operator-rb.yaml: 
     subjects[0].namespace:
       - strategy: inline
