--- a/helm/templates/operator-deployment.yaml
+++ b/helm/templates/operator-deployment.yaml
@@ -21,7 +21,7 @@ spec:
         app.kubernetes.io/managed-by: ibm-common-service-operator
         app.kubernetes.io/name: ibm-common-service-operator
         name: ibm-common-service-operator
-        intent: protected
+        intent: projected
         productName: IBM_Cloud_Platform_Common_Services
     spec: 
       affinity: 
@@ -37,7 +37,7 @@ spec:
                       - s390x
       containers:         
         - name: ibm-common-service-operator
-          image: {{ .Values.imagePullPrefix}}/{{ .Values.imageRegistryNamespaceOperator}}/{{ .Values.operatorImage }}:latest
+          image: {{ .Values.imagePullPrefix}}/{{ .Values.imageRegistryNamespaceOperator}}/{{ .Values.operatorImage }}:{{ .Values.operatorVersion }}
           command: 
             - /manager
           env:             
