--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -5,8 +5,11 @@ imagePullSecret: ibm-entitlement-key
 imageRegistryNamespaceOperator: cpopen
 imageRegistryNamespaceOperand: cpopen/cpfs
 
+# version tag for operator
+operatorVersion: '4.11.0'
+
 # other configuration you think you might need for your operator
 # following are examples, not required:
 operatorNamespace: operators
 servicesNamespace: services
-operatorImage: ibm-common-service-operator 
+operatorImage: ibm-common-service-operator
