correct cluster scope chart name and image pull secret
Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>

--- a/generate-helm/ibm-common-service-operator.config
+++ b/generate-helm/ibm-common-service-operator.config
@@ -6,8 +6,9 @@ sharedValues:
   imageRegistryNamespaceOperand: cpopen/cpfs
   imageRegistryNamespaceOperator: cpopen
   operatorImage: ibm-common-service-operator
-  operatorNamespace: operator-ns
-  tag: latest
+  operatorNamespace: operators
+  servicesNamespace: service
+  operatorVersion: latest
 globalConfig:
   metadata.labels:
   - strategy: newline
@@ -26,6 +27,9 @@ fileConfig:
     - strategy: inline
       key: sharedValues.operatorNamespace
   generate-helm/ibm-common-service-operator-generated/ibm-common-service-operator-deployment.yaml:
+    spec.template.spec.imagePullSecrets[0].name:
+    - strategy: inline
+      key: sharedValues.imagePullSecret
     spec.template.spec.containers[0].image:
     - strategy: inline
       key: sharedValues.imagePullPrefix
@@ -34,7 +38,7 @@ fileConfig:
     - strategy: inline
       key: sharedValues.operatorImage
     - strategy: inline
-      key: sharedValues.tag
+      key: sharedValues.operatorVersion
   generate-helm/ibm-common-service-operator-generated/ibm-common-service-operator-rb.yaml:
     subjects[0].namespace:
     - strategy: inline
