--- a/config/ibm-common-service-operator.yaml
+++ b/config/ibm-common-service-operator.yaml
@@ -696,7 +696,7 @@ spec:
         app.kubernetes.io/instance: ibm-common-service-operator
         app.kubernetes.io/managed-by: ibm-common-service-operator
         app.kubernetes.io/name: ibm-common-service-operator
-        intent: protected
+        intent: projected
         name: ibm-common-service-operator
         productName: IBM_Cloud_Platform_Common_Services
     spec:
@@ -769,6 +769,8 @@ spec:
           runAsNonRoot: true
           seccompProfile:
             type: RuntimeDefault
+      imagePullSecrets:
+      - name: ibm-entitlement-key
       serviceAccountName: ibm-common-service-operator
       terminationGracePeriodSeconds: 10
 ---
