--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -5,6 +5,8 @@ imagePullSecret: ibm-entitlement-key
 imageRegistryNamespaceOperator: cpopen
 imageRegistryNamespaceOperand: cpopen/cpfs
 
+operatorVersion: 4.11.0
+
 # other configuration you think you might need for your operator
 # following are examples, not required:
 operatorNamespace: operators
