updated helm template to work with CICD automation
Signed-off-by: Henry Li <henry.h.li@ibm.com>

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -9,9 +9,8 @@ operatorVersion: 4.11.0
 
 # other configuration you think you might need for your operator
 # following are examples, not required:
-operatorNamespace: <operator namespace>
-servicesNamespace: <services namespace>
-operatorImage: common-service-operator
+operatorNamespace: ""
+servicesNamespace: ""
 
 # CR configurations
 
