Add storageclass config option (#2372)
* add storageclass config option

Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>

* Update helm/templates/cr.yaml

Co-authored-by: Henry Li <zbhenryli@gmail.com>

---------

Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>
Co-authored-by: Henry Li <zbhenryli@gmail.com>

--- a/helm/templates/cr.yaml
+++ b/helm/templates/cr.yaml
@@ -13,3 +13,4 @@ spec:
   operatorNamespace: {{ .Values.global.operatorNamespace }}
   servicesNamespace: {{ .Values.global.instanceNamespace }}
   size: {{ .Values.commonServiceSpec.size }}
+  storageClass: {{ .Values.global.blockStorageClass }}
