Add label to helm generated resources (#2382)
* add label to cs cr and cpfs object to values

Signed-off-by: Allen Li <liyuchen223@gmail.com>

* update values

Signed-off-by: Allen Li <liyuchen223@gmail.com>

---------

Signed-off-by: Allen Li <liyuchen223@gmail.com>

--- a/helm/templates/operator-deployment.yaml
+++ b/helm/templates/operator-deployment.yaml
@@ -3,6 +3,8 @@ kind: Deployment
 metadata: 
   name: ibm-common-service-operator
   namespace: {{ .Values.global.operatorNamespace }}
+  labels:
+    component-id: {{ .Chart.Name }}
 spec: 
   replicas: 1
   selector: 
